FIX: Spotify paused notification icon alignment

--- a/src/components/header/Notice.scss
+++ b/src/components/header/Notice.scss
@@ -16,8 +16,16 @@
         margin-right: 7px;
     }
 
-    button {
-        margin-left: 5px;
+    .textLink_a20eaa {
         margin-right: 5px;
+        padding-left: 0;
+    }
+
+    button {
+        margin: 0 5px;
+    }
+
+    img {
+        margin: auto 15px auto auto;
     }
 }
